--- a/templates/index.html
+++ b/templates/index.html
@@ -1,12 +1,12 @@
 {% extends "base.html" %}
 {% block content %}
 {{ super() }}
-<h1>Books</h1>
+<h1 class="fam">Fam Vahtras bibliotek</h1>
 
 <table class="table table-striped" id="data">
     <thead>
         <tr>
-            <th>img</th><th>Authors</th><th>Title</th>
+            <th>📷</th><th>Författare</th><th>Titel</th>
         </tr>
     </thead>
     <tbody>
