--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
 <table class="table table-striped" id="data">
     <thead>
         <tr>
-            <th>📷</th><th>Författare</th><th>Titel</th>
+            <th>📷</th><th>Författare</th><th>Titel</th><th>Hylla</th>
         </tr>
     </thead>
     <tbody>
@@ -19,6 +19,9 @@
             </td>
             <td> {{ book.authors.0.last }}, {{ book.authors.0.first }} </td>
             <td><i>{{ book.title }}</i></td>
+            <td>
+                {% if book.hylla %}{{ book.hylla }}{% endif %}
+            </td>
         </tr>
 {% endfor %}
     </tbody>
