--- a/app/templates/start.html
+++ b/app/templates/start.html
@@ -1,20 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
 {{ super() }}
-
-<div class="col-md-12">
-    <center>
-    <img class="img-responsive" src="https://images.unsplash.com/photo-1495446815901-a7297e633e8d?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8Ym9va3N8ZW58MHx8MHx8fDA%3D" >
-    </center>
-</div>
-
-<form action="" method="POST">
-    {{ form.hidden_tag() }}
-    {{ form.title.label }}<br>
-    {{ form.title }}<br>
-</form>
-
-{% if books %}
+<h1 class="fam">Fam Vahtras bibliotek</h1>
 <table class="table table-striped" id="data">
     <thead>
         <tr>
@@ -37,8 +24,4 @@
         </tr>
 {% endfor %}
     </tbody>
-</table>
-{% endif %}
-
 {% endblock %}
-
