include subtitle, skip datatable search field

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -29,6 +29,7 @@
   <script>
     $(document).ready(function () {
         $('#data').DataTable({
+            searching: false,
             order: [[1, 'asc']],
             columns: [
                 {orderable: false, searchable: false},
