--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -7,13 +7,13 @@
     {{ form.hidden_tag() }}
     <div class="row">
     <div class="col">
-        <!--{{ form.title.label(class='form-label') }}-->
-        {{ form.title(class='form-control', placeholder="Titel") }}
-    </div>
-    <div class="col">
         <!--{{ form.author.label(class='form-label') }}-->
         {{ form.author(class='form-control', placeholder='Författare') }}
         <div id="authorHelp" class="form-text">Efternamn, Förnamn</div>
+    </div>
+    <div class="col">
+        <!--{{ form.title.label(class='form-label') }}-->
+        {{ form.title(class='form-control', placeholder="Titel") }}
     </div>
     <div class="col">
     <button type="submit" class="btn btn-light">Sök</button>
@@ -22,7 +22,7 @@
 </form>
 
 {% if books %}
-<table class="table table-striped" id="nodata">
+<table class="table table-striped" id="data">
     <thead>
         <tr>
             <th>📷</th><th>Författare</th><th>Titel</th><th>Hylla</th>
@@ -37,7 +37,12 @@
     {% endif %}
             </td>
             <td> {{ book.authors.0.last }}, {{ book.authors.0.first }} </td>
-            <td><i>{{ book.title.split(':')[0] }}</i></td>
+            <td>
+                <i>{{ book.title.split(':')[0] }}</i><br>
+                {% if ':' in book.title %}
+                    <i><small>{{ book.title.split(':')[1] }}</small></i>
+                {% endif %}
+            </td>
             <td>
                 {% if book.hylla %}{{ book.hylla }}{% endif %}
             </td>
