--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -36,6 +36,7 @@
                 {orderable: true, searchable: true},
                 {orderable: true, searchable: true},
                 {orderable: true, searchable: true},
+                {orderable: true, searchable: true},
             ]
         });
     });
