--- a/app/templates/start.html
+++ b/app/templates/start.html
@@ -5,7 +5,7 @@
 <table class="table table-striped" id="data">
     <thead>
         <tr>
-            <th>📷</th><th>Författare</th><th>Titel</th><th>Hylla</th>
+            <th>📷</th><th>Författare</th><th>Titel</th><th>Serie</th><th>Hylla</th>
         </tr>
     </thead>
     <tbody>
@@ -18,6 +18,11 @@
             </td>
             <td> {{ book.authors.0.last }}, {{ book.authors.0.first }} </td>
             <td><i>{{ book.title.split(':')[0] }}</i></td>
+            <td>
+                {% if book.series %}
+                    {{ book.series.title }} {{ book.series.volume }}
+                {% endif %}
+            </td>
             <td>
                 {% if book.hylla %}{{ book.hylla }}{% endif %}
             </td>
