--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -39,7 +39,11 @@
     <img src="data:image/jpeg;base64,{{ encode(book.image.thumbnail.read()).decode() }}">
     {% endif %}
             </td>
-            <td> {{ book.authors.0.last }}, {{ book.authors.0.first }} </td>
+            <td> 
+                {% for author in book.authors %}
+                    {{ author.last }}, {{ author.first }}<br>
+                {% endfor %}
+            </td>
             <td>
                 <i>{{ book.title.split(':')[0] }}</i><br>
                 {% if ':' in book.title %}
