--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -19,7 +19,7 @@
         {{ form.series(class='form-control', placeholder="Serie") }}
     </div>
     <div class="col">
-    <button type="submit" class="btn btn-light">Sök</button>
+    <button type="submit" class="btn btn-primary">Sök</button>
     </div>
     </div>
 </form>
