--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,46 +1,37 @@
 <!doctype html>
 <html>
 
-  <head>
-    <title>{{ title }}</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.25/css/dataTables.bootstrap5.css">
-  </head>
+    <head>
+    {% block head %}
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <body>
-    <div class="container">
-      <h2>{{ title }}</h2>
-      {% block content %}
-      <hr>
-    <div class="row">
-        <center>
-        <img class="img-fluid" src="/static/th-2240798387.jpeg" >
-        </center>
-    </div>
-      <hr>
-      {% endblock %}
-    </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-    <script type="text/javascript" charset="utf8" src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.10.25/js/jquery.dataTables.js"></script>
-    <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.10.25/js/dataTables.bootstrap5.js"></script>
-    {% block scripts %}
-  <script>
-    $(document).ready(function () {
-        $('#data').DataTable({
-            searching: false,
-            order: [[1, 'asc']],
-            columns: [
-                {orderable: false, searchable: false},
-                {orderable: true, searchable: true},
-                {orderable: true, searchable: true},
-                {orderable: true, searchable: true},
-                {orderable: true, searchable: true},
-            ]
-        });
-    });
-  </script>
-   {% endblock %}
-  </body>
+        <title>{{ title }}</title>
+
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    {% endblock %}
+    </head>
+
+    <body>
+        <div class="container">
+            <h2>{{ title }}</h2>
+            <hr>
+
+            {% block content %}
+            <div class="row">
+                <center>
+                   <img class="img-fluid" src="/static/th-2240798387.jpeg" >
+                </center>
+            </div>
+            {% endblock %}
+
+            <hr>
+        </div>
+
+        {% block scripts %}
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+        <script src="//ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+        {% endblock %}
+
+    </body>
 </html>
