extract and import pretty ok

--- a/app/templates/download.html
+++ b/app/templates/download.html
@@ -8,6 +8,12 @@
                 <span id="ext-bar-label" class="progress-bar-label">0%</span>
             </div>
         </div>
+        <div id="imp" class="progress" role="progressbar" aria-label="foo" aria-valuenow="0"
+            aria-valuemin="0" aria-valuemax="100" style="margin: 50px;">
+            <div id="imp-bar" class="progress-bar active" style="width: 0%">
+                <span id="imp-bar-label" class="progress-bar-label">0%</span>
+            </div>
+        </div>
 {% endblock %}
 
 {% block scripts %}
@@ -20,7 +26,11 @@
             $('#ext-bar').css('width', sent_data["ext"]+'%');
             $('#ext-bar-label').text(sent_data["ext"]+'%');
 
-            if(sent_data["ext"] == 100){
+            $('#imp').attr('aria-valuenow', sent_data["imp"]);
+            $('#imp-bar').css('width', sent_data["imp"]+'%');
+            $('#imp-bar-label').text(sent_data["imp"]+'%');
+
+            if(sent_data["ext"] == 100 & sent_data["imp"] == 100){
                 source.close()
             }
         }
