img linked to home

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -20,7 +20,7 @@
             {% block content %}
             <div class="row">
                 <center>
-                   <img class="img-fluid" src="/static/th-2240798387.jpeg" >
+                    <a href="/"><img class="img-fluid" src="/static/th-2240798387.jpeg" ></a>
                 </center>
             </div>
             {% endblock %}
