--- a/app/templates/start.html
+++ b/app/templates/start.html
@@ -1,7 +1,12 @@
 {% extends "base.html" %}
+
+{% block head %}
+{{ super() }}
+      <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.25/css/dataTables.bootstrap5.css">
+{% endblock %}
+
 {% block content %}
 {{ super() }}
-<h1 class="fam">Fam Vahtras bibliotek</h1>
 <table class="table table-striped" id="data">
     <thead>
         <tr>
@@ -29,4 +34,25 @@
         </tr>
 {% endfor %}
     </tbody>
+{% endblock %}
+
+{% block scripts %}
+    {{ super() }}
+      <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.10.25/js/jquery.dataTables.js"></script>
+      <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.10.25/js/dataTables.bootstrap5.js"></script>
+      <script>
+         $(document).ready(function () {
+           $('#data').DataTable({
+               searching: true,
+               order: [[1, 'asc']],
+               columns: [
+                   {orderable: false, searchable: false},
+                   {orderable: true, searchable: true},
+                   {orderable: true, searchable: true},
+                   {orderable: true, searchable: true},
+                   {orderable: true, searchable: true},
+               ]
+           });
+         });
+      </script>
 {% endblock %}
